--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
-asgiref==3.2.10
+asgiref==3.7.0
 astroid==2.4.2
-Django==3.0.8
-djangorestframework==3.11.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+Django==4.2.1
+django-filter==23.2
+djangorestframework==3.14.0
+Faker==18.9.0
+heroku==0.1.4
+idna==3.4
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pylint==2.5.3
+python-dateutil==1.5
+python-dotenv==1.0.0
 pytz==2020.1
+requests==2.31.0
 six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
+typing_extensions==4.6.0
+urllib3==2.0.2
+validate-docbr==1.10.0
 wrapt==1.12.1
